force-app/main/default/objects/Hyperlocal_Price__c/Hyperlocal_Price__c.object-meta.xml
<CustomObject>
    <label>Hyperlocal Price</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hyperlocal Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>