force-app/main/default/objects/Hyperlocal_Price__c/fields/Additional_Charge_INR_per_Km__c.field-meta.xml
<CustomField>
    <fullName>Additional_Charge_INR_per_Km__c</fullName>
    <inlineHelpText>INR per Km</inlineHelpText>
    <label>Additional Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>