force-app/main/default/objects/Hyperlocal_Price__c/fields/Additional_Range__c.field-meta.xml
<CustomField>
    <fullName>Additional_Range__c</fullName>
    <label>Additional Range</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>