force-app/main/default/objects/Hyperlocal_Price__c/fields/Base_Charge_per_Order_INR__c.field-meta.xml
<CustomField>
    <fullName>Base_Charge_per_Order_INR__c</fullName>
    <label>Base Charge per Order (INR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>