force-app/main/default/objects/Hyperlocal_Price__c/fields/Base_Range_in_Km__c.field-meta.xml
<CustomField>
    <fullName>Base_Range_in_Km__c</fullName>
    <inlineHelpText>Base Range in Km</inlineHelpText>
    <label>Base Range</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>