force-app/main/default/objects/Hyperlocal_Price__c/fields/COD_Charges__c.field-meta.xml
<CustomField>
    <fullName>COD_Charges__c</fullName>
    <label>COD Charges</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>