force-app/main/default/objects/Hyperlocal_Price__c/fields/COD_Charges_in__c.field-meta.xml
<CustomField>
    <fullName>COD_Charges_in__c</fullName>
    <inlineHelpText>Orders size &gt; INR 1000</inlineHelpText>
    <label>COD Charges in %</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>