force-app/main/default/objects/Hyperlocal_Price__c/fields/Number_of_Order_per_trip__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Order_per_trip__c</fullName>
    <label>Number of Order per trip</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>